@@ -8,9 +8,14 @@
 
 <h1 style="text-align:center">Raptor RDF Parser Toolkit - News</h1>
 
-<h2>????-??-?? Version 1.4.1 Released</h2>
-<p>FIXME
+<h2>2004-10-29 Version 1.4.1 Released</h2>
+<p>
+Fixed crashes in URI decoding and RSS enclosures.
 </p>
+
+<p>See the <a href="RELEASE.html#rel1_4_1">1.4.1 Release Notes</a>
+for the full details of the changes.</p>
+
 
 <h2>2004-10-24 Version 1.4.0 Released</h2>
 <p>
@@ -22,6 +27,7 @@ Added RSS enclosure support to RSS Tag Soup parser (Suzan Foster)
 
 <p>See the <a href="RELEASE.html#rel1_4_0">1.4.0 Release Notes</a>
 for the full details of the changes.</p>
+
 
 <h2>2004-09-20 Version 1.3.3 Released</h2>
 <p>
