@@ -1,5 +1,7 @@
 2004-10-28  Dave Beckett  <Dave.Beckett@bristol.ac.uk>
 
+	* Snapshotted raptor_1_4_1 for 1.4.1 release
+
 	* libraptor.3: 1.4.1 raptor_xml_escape_string return value now
 	int, <0 on failure.
 
